# nu-t3-applied-machine-learning

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  workspace.yaml
Dockerfiles/Dagster/: Dockerfile
grafana/provisioning/datasources/: postgres.yaml
src/ETL/: definitions.py
src/ETL/assets/: border_crossing.py
src/data/: sentiment_categorized.csv
src/data_gov_pipelines/: definitions.py
src/data_gov_pipelines/assets/: border_crossing.py
src/data_gov_pipelines/job/: customer_order_workflow.py
src/data_gov_pipelines/schedule/: customer_order_workflow_schedule.py
src/job_search_pipelines/: definitions.py
src/job_search_pipelines/assets/: job_searches.py
src/machine_learning_pipelines/: definitions.py
src/machine_learning_pipelines/assets/: sentiment_analysis.py
