[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datagovpipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.10",
    "dagster-webserver>=1.10.10",
    "requests>=2.32.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.dagster]
module_name = "src.ETL.definitions"
code_location_name = "DataGovPipelines"